Implementing the create car useCase, controller, repository, test and documentation
