# src/modules/cars/useCases/createCar/CreateCarController.ts
@@ -1,0 +1,33 @@
+import { Request, Response } from "express";
+import { container } from "tsyringe";
+
+import { CreateCarUseCase } from "./CreateCarUseCase";
+
+class CreateCarController {
+  async handle(request: Request, response: Response): Promise<Response> {
+    const {
+      name,
+      description,
+      daily_rate,
+      license_plate,
+      fine_amount,
+      brand,
+      category_id,
+    } = request.body;
+    const createCarUseCase = container.resolve(CreateCarUseCase);
+
+    await createCarUseCase.execute({
+      name,
+      description,
+      daily_rate,
+      license_plate,
+      fine_amount,
+      brand,
+      category_id,
+    });
+
+    return response.status(201).send();
+  }
+}
+
+export { CreateCarController };
